src/objects/Global_DealIQ_Condition_Detail__c.object
<CustomObject>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>FieldType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Order_Number__c</fullName>
        <label>Global Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfField__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfGlobal_DealIQ_Rulea__c</fullName>
        <label>Global DealIQ Rule</label>
        <referenceTo>Global_DealIQ_Condition__c</referenceTo>
        <relationshipName>Global_DealIQ_Condition_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>acfOperator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>is equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is less than</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfValue__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Global DealIQ Rule Detail</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Global DealIQ Condition Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global DealIQ Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>